<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="feedback_send">发送</string>
    <string name="feedback_hint">感谢你的反馈, 我们会聆听你的每一条建议和意见</string>
    <string name="feedback_address">你的联系方式（电邮、手机号或QQ）</string>
    <string name="feedback_empty">请填写反馈内容！</string>
    <string name="feedback_invalid">联系方式无效请重填！</string>

    <string name="user_name">登录名：</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password">密  码：</string>
    <string name="user_password_hint">建议设置6位以上密码</string>
    <string name="user_password_verify">确认密码：</string>
    <string name="user_password_verify_hint">请再次输入密码</string>
    <string name="user_phone">手机号码：</string>
    <string name="user_phone_hint">请填写您的手机号</string>
    <string name="user_email">电子邮箱：</string>
    <string name="user_email_hint">请填写您的邮箱</string>
    <string name="user_gender">性  别：</string>
    <string name="user_gender_hint">请填写您的性别</string>
    <string name="user_age">年  龄：</string>
    <string name="user_age_hint">请填写您的年龄</string>
    <string name="user_address">籍  贯:</string>
    <string name="user_address_hint">请填写您的籍贯</string>
    <string name="user_register">注册</string>
    <string name="user_cancel">取消</string>

    <string name="dialog_msg_cancel">手指上滑，取消发送</string>
    <string name="dialog_msg_want_cancel">松开手指，取消发送</string>
    <string name="dialog_msg_short">录音时间过短</string>


    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="title_login">登录</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="category_hone_title">通话录音</string>
    <string name="category_phone_summary">通话录音设置</string>
    <string name="category_record_title">普通录音</string>
    <string name="category_record_summary">普通录音设置</string>
    <string name="category_other_title">其他</string>
    <string name="category_other_summary">其他设置</string>
    <string name="record_channel_title">立体声</string>
    <string name="record_channel_summary">勾选后，将以双通道录音</string>
    <string name="record_phone_title">通话时录音</string>
    <string name="record_phone_summary">勾选后，通话时软件将会在后台录音</string>

    <string name="toast_no_sdcard">没有内存卡, 插入内存卡后才能录音</string>

    <string name="about_title">基于Android手机客户端语音情感识别系统设计与实现</string>
    <string name="about_content">随着移动互联网的飞速发展，人们对手机交互技术提出了更高的要求，即情感交互。情感交互可大致分为以下几种：人脸表情交互、语音情感交互、肢体行为情感交互、生理信号情感交互、文本信息中的情感和情感仿生代理等等。语音情感交互在情感交互中是具有举足轻重地位的。\n

语音情感交互就是通过语音情感识别技术对人类的情感进行获取、识别和响应，可以使用户在自然和谐的交互模式下高效地完成任务。语音中的情感信息可以影响人们的交流状态。所谓“听话听音”，说话人利用不同情感表达某语句时，听者可能会有不同的反应。\n

根据以上需求，基于Android的语音情感识别系统运用而生。该系统是一款能够识别说话人语音情感的Android应用程序。该程序是在Android SDK API21环境下编译而成，支持最低Android版本为Android4.4.2。该应用程序主要是Android端的语音采集和上传，并接收服务器返回的结果。\n

该系统具有一下功能：

采集语音，实现录音功能，并能显示音频文件列表。

通话时录音，在使用者允许的情况下，可以进行通话录音。

可以设置录音时的采样率，单通道或立体声。

可以实现用户的注册和登录功能，可以保存用户的信息。

基于Android的语音情感识别系统软件设计合理，界面友好，操作简便。可以很方便

的供用户使用。

</string>

    <string name="format_file_name">"MM月dd日 hh：mm"</string>

    <string name="title_record">语音识别</string>
    <string name="title_audio_list">语音列表</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="title_feedback">反馈</string>

    <string name="toast_exit">再按一次退出</string>

    <string name="str_recoder_normal">按住说话</string>
    <string name="str_recoder_recoding">松开  结束</string>
    <string name="str_recoder_want_cancel">松开手指，取消发送</string>


    <string-array name="menu_list">
        <item>语音识别</item>
        <item>语音列表</item>
        <item>设置</item>
        <item>关于</item>
        <item>反馈</item>
    </string-array>

    <string name="record_sample_rate_title">采样率</string>
    <string name="record_sample_rate_summary">设置录音时的音频采样率</string>
    <string name="record_sample_default">441000</string>

    <string-array name="record_sample_rate">
        <item>8000 HZ</item>
        <item>11025 HZ</item>
        <item>16000 HZ</item>
        <item>22050 HZ</item>
        <item>32000 HZ</item>
        <item>441000 HZ</item>
    </string-array>

    <string-array name="record_sample_rate_value">
        <item>8000</item>
        <item>11025</item>
        <item>16000</item>
        <item>22050</item>
        <item>32000</item>
        <item>441000</item>
    </string-array>

    <string name="audio_format_title">音频格式</string>
    <string name="audio_format_summary">设置录音时的音频采样率</string>
    <string name="audio_format_default">4</string>

    <string-array name="audio_format">
        <item>Standard Quality(3GPP)</item>
        <item>Standard Quality(AMR)</item>
        <item>Better Quality(AMR_WB)</item>
        <item>High Quality(AAC)</item>
        <item>Highest Quality(WAV)</item>
    </string-array>

    <string-array name="audio_format_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="auto_delete_title">自动清理</string>
    <string name="auto_delete_summary">设置自动清理本地录音文件的时间</string>
    <string name="auto_delete_default">0</string>

    <string-array name="auto_delete">
        <item>不自动清理</item>
        <item>一天以前</item>
        <item>一周以前</item>
        <item>两周以前</item>
        <item>一个月以前</item>
    </string-array>

    <string-array name="auto_delete_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="title_activity_record_list">RecordListActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="info_name">文件名称：</string>
    <string name="info_mood">情感状态：</string>
    <string name="info_duration">录音时长：</string>
    <string name="info_date">录音时间：</string>
    <string name="info_address">录音地点：</string>
    <string name="info_mood_txt">题 外 话：</string>
    <string name="info_say_txt">伤心</string>
    <string name="info_happy_txt">高兴</string>
    <string name="info_angry_txt">生气</string>
    <string name="info_neutral">平静</string>
</resources>
