<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/user_info_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_name"
                android:id="@+id/user_name" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_name_hint"
                android:ems="10"
                android:id="@+id/user_name_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_password"
                android:id="@+id/user_password" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_password_hint"
                android:ems="10"
                android:password="true"
                android:id="@+id/user_password_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_password_verify"
                android:id="@+id/user_password_verify" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="@string/user_password_verify_hint"
                android:ems="10"
                android:id="@+id/user_password_verify_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_phone"
                android:id="@+id/user_phone" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/user_phone"
                android:ems="10"
                android:id="@+id/user_phone_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_email"
                android:id="@+id/user_email" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email_hint"
                android:ems="10"
                android:id="@+id/user_email_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_gender"
                android:id="@+id/user_gender" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_gender_hint"
                android:ems="10"
                android:id="@+id/user_gender_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_age"
                android:id="@+id/user_age" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_age_hint"
                android:ems="10"
                android:id="@+id/user_age_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <TextView
                style="@style/userInfoStyle"
                android:text="@string/user_address"
                android:id="@+id/user_address" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_address_hint"
                android:ems="10"
                android:id="@+id/user_address_value"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_margin_top"
            android:layout_marginEnd="@dimen/user_info_margin_end"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/user_register"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:id="@+id/user_register" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/user_cancel"
                android:id="@+id/user_cancel"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>