<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.hm.madroid.mood.ui.FeedbackFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/mili_margin" >

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:hint="@string/feedback_address"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="12dp"
            android:textColor="#4d4d4d"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/feedback_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round"
            android:gravity="top|left"
            android:hint="@string/feedback_hint"
            android:paddingBottom="12dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="12dp"
            android:textColor="#4d4d4d"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/click_btn_bg_3"
            android:gravity="center"
            android:text="@string/feedback_send"
            android:textColor="#737373"
            android:textSize="16sp" />
    </LinearLayout>


</FrameLayout>
